test/extern/multilocale/externRemoteRecord1.good
foo got: 42
externRemoteRecord1.chpl:16: error: remote records (like 'myR') cannot be passed to external routines (like 'bar')
